Refactored project to MVC architecture
